loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:4: error: not found: value prendBuscuit
prendBuscuit()
^