loopfor.LoopFor.scala.code
for (place <- 0 to 6) {
  avance(place)
}
prendBuscuit()
for (place <- 0 to 6) {
  recule(place)
}
poseBiscuit()